<resources>
    <string name="app_name">SleepLock</string>
    <string name="action_settings">Settings</string>
    <string name="no_sound">No Sound</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>

    <string name="reset_time">00:00</string>
    <string name="timer">Timer</string>
    <string name="noise">Noise</string>
    <string name="select_a_time">Select a Time</string>
    <string name="set_time">Set Time</string>
    <string name="cancel">Cancel</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="colon">:</string>
    <string name="sound_selected">Sound Selected</string>
    <string name="timer_finished">Timer Finished</string>
    <string name="reset_the_timer">Reset the Timer</string>

    <string name="subText">Sound Options</string>
    <string name="contentTitle">Sleep Lock</string>
    <string name="channel_name">SleepLock Notification</string>
    <string name="channel_description">Displays Current Time</string>

    <string name="rain">Rain</string>
    <string name="oceanShore">"OceanShore</string>
    <string name="underwater">"UnderWater</string>
    <string name="morningBliss">"Morning Bliss</string>
    <string name="chirpingBirds">Chirping Birds</string>
    <string name="peacefulNight">Peaceful Night</string>
    <string name="fan">Fan</string>
    <string name="helicopter">Helicopter</string>
    <string name="campFire">Camp Fire</string>
    <string name="boilingWater">Boiling Water</string>
    <string name="aboveTheSky">Above The Sky</string>
    <string name="waterStream">Water Stream</string>


    <string name="customTime">Select Custom Time</string>
    <string name="tenMin">10 min</string>
    <string name="twentyMin">20 min</string>
    <string name="thirtyMin">30 min</string>
    <string name="fortyMin">40 min</string>
    <string name="fiftyMin">50 min</string>
    <string name="sixtyMin">60 min</string>
    <string name="seventyMin">70 min</string>
    <string name="eightyMin">80 min</string>
    <string name="ninetyMin">90 min</string>
</resources>