<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_fragment_layout"
        android:background="#2F3238"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.feature.timer.TimerFragment">

    <TextView
            android:id="@+id/currentTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="#e0f7fa"
            android:text="@string/reset_time"
            android:textSize="90sp"
            android:singleLine="true"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.254"/>

    <Button
            android:id="@+id/startPauseButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:backgroundTintMode="add"
            android:text="@string/start"
            android:textColor="#0B3136"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent" tools:targetApi="lollipop"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:src="@drawable/clock_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentTimeTextView"
            app:layout_constraintVertical_bias="0.71000004" android:focusable="true" android:layout_marginRight="8dp"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/resetButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentTimeTextView"
            app:layout_constraintVertical_bias="0.8" android:layout_marginLeft="16dp">

        <ImageView
                android:id="@+id/cardViewPic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/nosound"/>
    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/cardViewText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_sound"
            android:textSize="18sp"
            android:textColor="#e0f7fa"

            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView"/>

    <Button
            android:id="@+id/resetButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:text="@string/reset"
            android:textColor="#4dd0e1"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/startPauseButton"
            app:layout_constraintEnd_toEndOf="@+id/startPauseButton"
            app:layout_constraintStart_toStartOf="@+id/startPauseButton"
            tools:text="Reset Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>